[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "mpx"
version = "0.1"
description = "Model Predictive Control in JAX"
authors = [
    { name = "Amatucci Lorenzo" }
]
license = { text = "BSD-3-Clause" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "jax[cuda12]",
    "mujoco",
    "mujoco-mjx",
    "gym-quadruped",
    "trajax @ git+https://github.com/google/trajax"
]

[project.urls]
Homepage = "https://github.com/iit-DLSLab/mpx"

[tool.hatch.metadata]
allow-direct-references = true
